--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -47,6 +47,22 @@
             </dd>
 
             <dt>
+                <p>@Html.DisplayNameFor(model => model.WeedFlowerColor)</p>
+            </dt>
+
+            <dd>
+                <p>@Html.DisplayFor(model => model.WeedFlowerColor)</p>
+            </dd>
+
+            <dt>
+                <p>@Html.DisplayNameFor(model => model.WeedControl)</p>
+            </dt>
+
+            <dd>
+                <p>@Html.DisplayFor(model => model.WeedControl)</p>
+            </dd>
+
+            <dt>
                 <p>Replace indigene</p>
             </dt>
 
