--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -5,25 +5,25 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!--Header-->
+<div class="row" style="background-color:#344239;">
 
-<div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
-    <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
-        <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
-    </div>
-    <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
-        <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">in Yarra City</p>
-    </div>
-</div>
+    <!--Header-->
 
-<div class="row" style="padding:50px;background-color:#344239;">
+    <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
+        <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
+            <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
+        </div>
+        <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
+            <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">in Yarra City</p>
+        </div>
+    </div>
+    <!--weed information and picture-->>
     <p style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%">< @Html.ActionLink("Back to List", "Index")</p>
-    <div class="col-sm-6 col-sm-offset-3">
-        <img class="col-xs-12 col-lg-6 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
-        <hr />
+    <div class="col-sm-6 col-sm-offset-3" style="margin-top:20px;position:relative">
+        <img class="col-xs-12 col-lg-8 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
         <dl class="col-xs-12 col-lg-12 col-lg-offset-3 dl-horizontal white-word">
             <dt>
-                <p>@Html.DisplayNameFor(model => model.WeedCommonName)</p>
+                <p>Common Name</p>
             </dt>
 
             <dd>
@@ -31,7 +31,7 @@
             </dd>
 
             <dt>
-                <p>@Html.DisplayNameFor(model => model.WeedSciName)</p>
+                <p>Scientific Name</p>
             </dt>
 
             <dd>
@@ -39,7 +39,7 @@
             </dd>
 
             <dt>
-                <p>@Html.DisplayNameFor(model => model.WeedDesc)</p>
+                <p>Description</p>
             </dt>
 
             <dd>
@@ -47,7 +47,7 @@
             </dd>
 
             <dt>
-                <p>@Html.DisplayNameFor(model => model.WeedFlowerColor)</p>
+                <p>Flower Color</p>
             </dt>
 
             <dd>
@@ -55,7 +55,7 @@
             </dd>
 
             <dt>
-                <p>@Html.DisplayNameFor(model => model.WeedControl)</p>
+                <p>Weed Control</p>
             </dt>
 
             <dd>
@@ -63,7 +63,7 @@
             </dd>
 
             <dt>
-                <p>Replace indigene</p>
+                <p>Replace Indigene</p>
             </dt>
 
             <dd>
