--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -9,48 +9,49 @@
     };
 }
 
-<!--Header-->>
-    <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
-        <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
-            <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Remove Weeds</p>
-        </div>
-        <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
-            <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">From my garden</p>
-        </div>
-    </div>
 
+    <div class="row" style="background-color:#344239;">
 
-    <div class="row" style="padding:50px;background-color:#344239;">
+        <!--Header-->>
+        <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
+            <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
+                <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Remove Weeds</p>
+            </div>
+            <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
+                <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">From my garden</p>
+            </div>
+        </div>
+
         <h1 class="white-word" style="text-align:center;font-family:'Arial';padding-top:10px;">Have you ever see these plant</h1>
 
-
+        <!--Filter-->>
         @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
         {
             <div style="text-align:center">
-                <div class="btn-group-lg" role="group" aria-label="Flower color" >
+                <div class="btn-group-lg" role="group" aria-label="Flower color">
                     <h4 class="white-word">Flower color</h4>
-                    
-                        @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                              
-                        @Ajax.ActionLink("Yellow", "WeedFilter", new { selected = "Yellow" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                
-                        @Ajax.ActionLink("Purple", "WeedFilter", new { selected = "Purple" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                
-                        @Ajax.ActionLink("Blue", "WeedFilter", new { selected = "Blue" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                   
-                        @Ajax.ActionLink("Pink", "WeedFilter", new { selected = "Pink" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                 
-                        @Ajax.ActionLink("No flower", "WeedFilter", new { selected = "No" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                    
-                        @Ajax.ActionLink("All", "WeedFilter", new { selected = "All" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                    
+
+                    @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
+                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
+                    @Ajax.ActionLink("Yellow", "WeedFilter", new { selected = "Yellow" },
+                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
+                    @Ajax.ActionLink("Purple", "WeedFilter", new { selected = "Purple" },
+                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
+                    @Ajax.ActionLink("Blue", "WeedFilter", new { selected = "Blue" },
+                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
+                    @Ajax.ActionLink("Pink", "WeedFilter", new { selected = "Pink" },
+                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
+                    @Ajax.ActionLink("No flower", "WeedFilter", new { selected = "No" },
+                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
+                    @Ajax.ActionLink("All", "WeedFilter", new { selected = "All" },
+                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
                 </div>
 
             </div>
