--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
     <!--Header-->
     <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
-        <div class="col-sm-12 white-word" style="position:relative;margin-top:20px;margin-top:300px;text-align:center">
+        <div class="col-sm-12 white-word" style="position:relative;margin-top:300px;text-align:center">
             <button type="submit" style="color:white; text-align: center;box-shadow:0px 0px 8px 5px #1E2621;background-color:transparent;">See Plants →</button>
         </div>
     </div>
