--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -23,7 +23,7 @@
         <img class="col-xs-12 col-lg-8 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
         <dl class="col-xs-12 col-lg-12 col-lg-offset-3 dl-horizontal white-word">
             <dt>
-                <p>Common Name</p>
+                Common Name
             </dt>
 
             <dd>
@@ -31,7 +31,7 @@
             </dd>
 
             <dt>
-                <p>Scientific Name</p>
+                Scientific Name
             </dt>
 
             <dd>
@@ -39,7 +39,7 @@
             </dd>
 
             <dt>
-                <p>Description</p>
+                Description
             </dt>
 
             <dd>
@@ -47,7 +47,7 @@
             </dd>
 
             <dt>
-                <p>Flower Color</p>
+                Flower Color
             </dt>
 
             <dd>
@@ -55,7 +55,7 @@
             </dd>
 
             <dt>
-                <p>Weed Control</p>
+                Weed Control
             </dt>
 
             <dd>
@@ -63,7 +63,7 @@
             </dd>
 
             <dt>
-                <p>Replace Indigene</p>
+                Replace Indigene
             </dt>
 
             <dd>
