--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -12,7 +12,7 @@
 
     <div class="row" style="background-color:#344239;">
 
-        <!--Header-->>
+        <!--Header-->
         <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
             <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
                 <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Remove Weeds</p>
@@ -38,12 +38,6 @@
                     new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
                     @Ajax.ActionLink("Purple", "WeedFilter", new { selected = "Purple" },
-                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-
-                    @Ajax.ActionLink("Blue", "WeedFilter", new { selected = "Blue" },
-                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-
-                    @Ajax.ActionLink("Pink", "WeedFilter", new { selected = "Pink" },
                     new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
                     @Ajax.ActionLink("No flower", "WeedFilter", new { selected = "No" },
